test-results/map.err
[1m/mnt/c/Users/matthew/git/upp/examples/map.c:31:5: error: @map expected 1 arguments, but found 0[0m
    @map arr z { z = z + 1; };
    [1;31m^[0m
